# telcoin-ocaml

./: .gitignore  LICENSE-MIT  PORTING.md  README.md  dune-project
lib/codec/: bcs.ml  bcs.mli  dune
lib/consensus/: bullshark.ml  bullshark.mli  committed_log.ml  committed_log.mli  dag.ml  dag.mli  dune  leader_schedule.ml  leader_schedule.mli  node.ml  node.mli  parent_aggregator.ml  parent_aggregator.mli  proposer.ml  proposer.mli  reputation_scores.ml  reputation_scores.mli  sub_dag.ml  sub_dag.mli  vote_aggregator.ml  vote_aggregator.mli  voter.ml  voter.mli
lib/crypto/: dune  tn_crypto.mli
lib/crypto_stub/: dune  tn_crypto.ml
lib/evm/: access.ml  access.mli  alu.ml  alu.mli  blake2.ml  blake2.mli  block_hashes.ml  block_hashes.mli  call_depth.ml  call_depth.mli  code.ml  code.mli  contract_address.ml  contract_address.mli  data.ml  data.mli  depth.ml  depth.mli  destruction.ml  destruction.mli  dune  effects.ml  effects.mli  env.ml  env.mli  gas.ml  gas.mli  interpreter.ml  interpreter.mli  lifecycle.ml  lifecycle.mli  log.ml  log.mli  log_journal.ml  log_journal.mli  memory.ml  memory.mli  mutability.ml  mutability.mli  opcode.ml  (+17 more)
lib/execution/: consensus_block.ml  consensus_block.mli  dune  engine.ml  engine.mli  nothing.ml  nothing.mli
lib/keccak/: dune  tn_keccak.ml  tn_keccak.mli
lib/sim/: dune  sim.ml  sim.mli
lib/state/: account.ml  account.mli  address_word.ml  address_word.mli  bytecode.ml  bytecode.mli  dune  nonce.ml  nonce.mli  storage.ml  storage.mli  transfer.ml  transfer.mli  u256.ml  u256.mli  world_state.ml  world_state.mli
lib/std/: dune  nonempty.ml  nonempty.mli  prng.ml  prng.mli
lib/types/: authority.ml  authority.mli  authority_id.ml  authority_id.mli  committee.ml  committee.mli  digests.ml  digests.mli  dune  leader_round.ml  leader_round.mli  round.ml  round.mli  units.ml  units.mli
lib/vertex/: certificate.ml  certificate.mli  dune  header.ml  header.mli  intent.ml  intent.mli  vote.ml  vote.mli
probe_tmp/: dune  probe.ml
test/: dune  test_bcs.ml  test_calls.ml  test_consensus.ml  test_creation.ml  test_evm.ml  test_execution.ml  test_extcode.ml  test_host_seam.ml  test_interpreter.ml  test_keccak.ml  test_precompile.ml  test_primary.ml  test_properties.ml  test_recovery.ml  test_sim.ml  test_state.ml  test_types.ml  test_vertex.ml
